--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ ul {
   list-style: none;
 }
 
+h3 {
+  font-size: 2.4rem;
+  marg
+}
+
 /* RESERVIA CSS STARTS HERE */
 
 /* HEADER STYLING */
@@ -35,7 +40,7 @@ header {
 }
 
 .header__wrapper {
-  max-width: 114rem;
+  max-width: 144rem;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -68,7 +73,7 @@ nav ul li {
 /* MAIN STYLING */
 
 .main__wrapper {
-  max-width: 114rem;
+  max-width: 144rem;
   margin: 0 auto;
   padding: 2rem;
 }
@@ -122,6 +127,7 @@ nav ul li {
 .filters {
   display: flex;
   align-items: center;
+  margin-bottom: 3rem;
 }
 
 .filters h4 {
@@ -168,4 +174,138 @@ nav ul li {
   margin: 0 auto;
   margin-left: 2rem;
   padding: 0 1rem;
+  font-weight: 400;
+}
+
+/* MAIN GRID STYLING */
+
+.main__grid {
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  grid-template-rows: minmax(100px, max-content);
+  grid-gap: 6rem;
+}
+
+.main__accommodations,
+.main__popular,
+.main__activities {
+  background-color: #f2f2f2;
+  border-radius: 4rem;
+  padding: 5rem;
+}
+
+/* ACCOMODATIONS STYLING */
+
+.accommodations {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 3rem;
+}
+
+.accommodations__heading {
+  margin-bottom: 2rem;
+}
+
+.accommodations__showmore {
+  margin: 4rem 0 0;
+}
+
+/* CARD STYLING */
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.6rem;
+  background-color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.068), 0 2px 2px rgba(0, 0, 0, 0.068),
+    0 4px 4px rgba(0, 0, 0, 0.068), 0 8px 8px rgba(0, 0, 0, 0.068);
+}
+
+.card__img-container {
+  width: 100%;
+  padding-top: 44%;
+  overflow: hidden;
+  position: relative;
+  border-radius: 15px 15px 0 0;
+}
+
+.card__img {
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+}
+
+.card__content {
+  margin-top: 1rem;
+}
+
+.card__heading {
+  margin-bottom: .2rem;
+}
+
+.card__text {
+  font-size: 1.5rem;
+}
+
+.card__stars {
+  font-size: 1.2rem;
+  margin: 0.8rem 0;
+}
+
+.fas {
+  color: #0065FC;
+}
+
+.fas--grey{
+  color:rgb(190, 190, 190)
+}
+
+/* CARD STYLING POPULAR SECTION */
+
+.popular {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 1fr;
+  grid-gap: 3rem;
+}
+
+.popular__heading {
+  margin-bottom: 2rem;
+}
+
+.card--popular {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  flex-direction: row;
+  grid-template-rows: repeat(auto-fit, minmax(2rem, 1fr))
+}
+
+.card--popular .card__img-container {
+  padding-top: 110%;
+  border-radius: 15px 0 0 15px;
+}
+
+.card--popular .card__img {
+  width: auto;
+  height: 100%;
+}
+
+.card--popular .card__img--vertical {
+  width: 100%;
+  height: auto;
+}
+
+.card--popular .card__content {
+  margin-left: 1rem;
+}
+
+/* ACTIVITIES STYLING SECTION */
+
+.main__activities {
+  grid-column: 1 / 3;
 }
