--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ ul {
 }
 
 h3 {
-  font-size: 2.4rem;
-  marg
+  font-size: 2.1rem;
 }
 
 /* RESERVIA CSS STARTS HERE */
@@ -245,7 +244,7 @@ nav ul li {
 }
 
 .card__heading {
-  margin-bottom: .2rem;
+  margin-bottom: 0.2rem;
 }
 
 .card__text {
@@ -258,11 +257,11 @@ nav ul li {
 }
 
 .fas {
-  color: #0065FC;
+  color: #0065fc;
 }
 
-.fas--grey{
-  color:rgb(190, 190, 190)
+.fas--grey {
+  color: rgb(190, 190, 190);
 }
 
 /* CARD STYLING POPULAR SECTION */
@@ -282,11 +281,11 @@ nav ul li {
   display: grid;
   grid-template-columns: 2fr 3fr;
   flex-direction: row;
-  grid-template-rows: repeat(auto-fit, minmax(2rem, 1fr))
+  grid-template-rows: repeat(auto-fit, minmax(2rem, 1fr));
 }
 
 .card--popular .card__img-container {
-  padding-top: 110%;
+  padding-top: 105%;
   border-radius: 15px 0 0 15px;
 }
 
@@ -304,8 +303,74 @@ nav ul li {
   margin-left: 1rem;
 }
 
+.card--popular .card__stars {
+  margin-top: 2rem;
+}
+
 /* ACTIVITIES STYLING SECTION */
 
 .main__activities {
   grid-column: 1 / 3;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  padding: 0;
+}
+
+.activities {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 4rem;
+}
+
+.activities__heading {
+  margin-bottom: 2.6rem;
+}
+
+.activity {
+  display: flex;
+  flex-direction: column;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  overflow: hidden;
+
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.068), 0 2px 2px rgba(0, 0, 0, 0.068),
+    0 4px 4px rgba(0, 0, 0, 0.068), 0 8px 8px rgba(0, 0, 0, 0.068);
+}
+
+.activity__img-container {
+  padding-top: 56%;
+  overflow: hidden;
+  position: relative;
+}
+
+.activity__img {
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: auto;
+}
+
+.activity__img-container--vertical {
+  padding-top: 146%;
+}
+
+.activity__img--vertical {
+  height: 100%;
+  width: auto;
+}
+
+.activity__title {
+  margin: 2rem;
+}
+
+.activity__1 {
+  grid-row: 1/3;
+}
+
+.activity__3 {
+  grid-row: 1/3;
+  grid-column: 3/4;
 }
