--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,12 @@ nav ul li {
 .active {
   color: #0065fc;
 }
+
+.active::before {
+  width: 100%;
+  height: 2px;
+}
+
 .activities-link {
   color: rgb(34, 34, 34);
 }
@@ -93,7 +99,7 @@ nav ul li {
   overflow: hidden;
 }
 
-.searchbar__icon {
+.searchbar .searchbar__icon {
   color: rgb(58, 58, 58);
   background-color: #dfdfdf;
   margin: 2rem;
@@ -105,7 +111,7 @@ nav ul li {
   height: 100%;
   padding: 1rem;
   font-weight: 600;
-  color: rgb(58, 58, 58);
+  color: rgb(63, 63, 63);
 }
 
 .searchbar__button {
@@ -163,8 +169,10 @@ nav ul li {
 .filter__icon {
   background-color: #c4dcff;
   position: absolute;
+  height: 3.5rem;
+  width: 3.5rem;
   padding: 0.9rem;
-  left: -0.4rem;
+  margin-left: -1.2rem;
   border-radius: 30px;
   color: #0065fc;
 }
@@ -174,6 +182,28 @@ nav ul li {
   margin-left: 2rem;
   padding: 0 1rem;
   font-weight: 400;
+}
+
+/* DISCLAIMER STYLING SECTION */
+
+.disclaimer {
+  display: flex;
+  margin-bottom: 3rem;
+}
+
+.disclaimer__icon {
+  background-color: #c4dcff;
+  border-radius: 50px;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.disclaimer__text {
+  margin-left: 1.6rem;
+  font-size: 1.4rem;
 }
 
 /* MAIN GRID STYLING */
@@ -189,7 +219,7 @@ nav ul li {
 .main__popular,
 .main__activities {
   background-color: #f2f2f2;
-  border-radius: 4rem;
+  border-radius: 1.5rem;
   padding: 5rem;
 }
 
@@ -220,6 +250,16 @@ nav ul li {
   border-radius: 15px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.068), 0 2px 2px rgba(0, 0, 0, 0.068),
     0 4px 4px rgba(0, 0, 0, 0.068), 0 8px 8px rgba(0, 0, 0, 0.068);
+  position: relative;
+}
+
+.card__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
 }
 
 .card__img-container {
@@ -273,8 +313,18 @@ nav ul li {
   grid-gap: 3rem;
 }
 
+.popular__header {
+  display: flex;
+  justify-content: space-between;
+}
+
 .popular__heading {
   margin-bottom: 2rem;
+}
+
+.popular__icon {
+  font-size: 2rem;
+  color: rgb(26, 26, 26);
 }
 
 .card--popular {
@@ -333,6 +383,7 @@ nav ul li {
   background-color: #f2f2f2;
   border-radius: 15px;
   overflow: hidden;
+  position: relative;
 
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.068), 0 2px 2px rgba(0, 0, 0, 0.068),
     0 4px 4px rgba(0, 0, 0, 0.068), 0 8px 8px rgba(0, 0, 0, 0.068);
@@ -373,4 +424,37 @@ nav ul li {
 .activity__3 {
   grid-row: 1/3;
   grid-column: 3/4;
+}
+
+/* FOOTER STYLING SECTION */
+
+.footer__wrapper {
+  background-color: #f2f2f2;
+  margin-top: 6rem;
+  padding: 6rem 0;
+}
+
+footer {
+  max-width: 144rem;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #f2f2f2;
+  display: flex;
+}
+
+footer .footer__section:not(:first-child) {
+  margin-left: 28rem;
+}
+
+.footer__heading {
+  margin-bottom: 1rem;
+  font-size: 1.7rem;
+}
+
+.footer__list li {
+  margin-bottom: 0.2rem;
+}
+
+.footer__list li a {
+  color: rgb(34, 34, 34);
 }
